// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-parameters.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
%YAML 1.2
---

=====================================output=====================================
%YAML 1.2
---

================================================================================
`;

exports[`without-parameters.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
%SOMETHING
---

=====================================output=====================================
%SOMETHING
---

================================================================================
`;
